--- a/ms/figures.Rmd
+++ b/ms/figures.Rmd
@@ -8,6 +8,7 @@ editor_options:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
+library(patchwork)
 library(here)
 library(sf)
 library(rnaturalearth)
@@ -190,6 +191,244 @@ plot(meaasen["T4"], main = 'forest',
      key.pos = 1, key.width = lcm(1.4), nbreaks = 6)
 dev.off()
 ```
+
+# Relative establishment
+
+```{r}
+results <- readRDS(here("output","results.rds"))
+types <- read_csv(here('data', 'typenames.csv')) %>% 
+  rename(nin = type, type = name)
+reflvl <- "T4"
+
+results$arithmetic
+results$model.preds
+results$model.preds.localities
+
+arith <- bind_rows(results$arithmetic, .id = "species") %>% 
+  filter(!(n == 0 & daa < 5)) %>% 
+  filter(nin != "plantation forest") %>% 
+  left_join(types) %>% 
+  select(-daa, -n, -density) %>% 
+  mutate(modeled = FALSE)
+  
+# Scaling model fit per species
+scalers <- map_dbl(results$model.preds, ~ filter(.,  nin == reflvl) %>% pull(fit))
+est <- map2(results$model.preds, results$model.preds.localities, bind_rows)
+est.scaled <- map2(est, scalers, ~ mutate_at(.x, .vars = c('fit', 'ci.l', 'ci.u'),
+                                      magrittr::divide_by, .y))
+est.scaled <- bind_rows(est.scaled, .id = "species") %>% 
+  left_join(types, by = 'nin') %>% 
+  mutate(modeled = TRUE)
+
+dat <- bind_rows(est.scaled, arith)
+dat
+tail(dat)
+```
+
+```{r}
+plot <- dat
+plot <- mutate(plot, species = fct_relevel(species, c('P.sitchensis-lutzii', 
+                                                      'P.abies', 
+                                                      'Larix', 
+                                                      'P.contorta')))
+
+print(filter(types, nin %in% dat$nin), n=32)
+typetab <- tribble(
+  ~nin, ~wetland, ~GrL, ~type,
+  'T1',         F,  NA, 'bare rock',                                                  
+  'T2',         F,  NA, 'open shallow-soil ground',                                    
+  'T4',         F,  NA, 'forest',                                                       
+  'T6',         F, 'S', 'rocky shore',                                                  
+  'T12',        F, 'S', 'tidal meadow',                                                 
+  'T13',        F, 'R', 'bare talus slope',                                             
+  'T16',        F, 'R', 'talus-slope heath and meadow',                                 
+  'T17',        F, 'D', 'open active landslide',                                        
+  'T21',        F, 'D', 'sand dune',                                                    
+  'T24',        F, 'D', 'coastal driftline',                                            
+  'T27',        F, 'R', 'boulder field',                                                
+  'T29',        F, 'R', 'coastal shingle beach',                                        
+  'T30',        F, 'D', 'alluvial forest',                                              
+  'T31',        F, 'M', 'boreal heath',                                                 
+  'T32',        F, 'M', 'semi-natural grassland',                                       
+  'T33',        F, 'M', 'semi-natural tidal and salt meadow',                           
+  'T34',        F, 'M', 'coastal heath',                                                
+  'artificial', F, 'N', 'artificial substrate',                                         
+  'T36',        F, 'N', 'drained wetland and terrestrialized freshwater sediment',      
+  'T40',        F, 'N', 'strongly altered ground with semi-natural grassland character',
+  'T41',        F, 'N', 'agriculturally improved grassland with semi-natural character',
+  'T44',        F, 'N', 'arable field',                                                 
+  'T45',        F, 'N', 'agriculturally improved grassland',                            
+  'V1',         T,  NA, 'open fen',                                                     
+  'V2',         T,  NA, 'mire and swamp forest',                                        
+  'V3',         T, 'S', 'bog',                                                          
+  'V4',         T, 'S', 'spring',                                                       
+  'V8',         T, 'S', 'tidal and alluvial swamp forest',                              
+  'V9',         T, 'M', 'semi-natural fen',                                             
+  'V10',        T, 'M', 'semi-natural wet meadow',                                      
+  'V12',        T, 'N', 'drained mire',                                                 
+  'V13',        T, 'N', 'artificial wetland' 
+) %>% 
+  mutate(disturbance = case_when(
+    GrL %in% c('R','D','M','N') ~ TRUE,
+    TRUE ~ FALSE
+  )) %>% 
+  mutate(facekey = case_when(
+    wetland & disturbance ~ 'bold.italic',
+    wetland & !disturbance ~ 'italic',
+    !wetland & disturbance ~ 'bold',
+    !wetland & !disturbance ~ 'plain'
+  ))
+
+typerank <- filter(est.scaled, is.na(locality)) %>% 
+  mutate(wgt = 1/(log(ci.u) - log(ci.l))) %>% 
+  group_by(species) %>% 
+  group_split() %>% 
+  map(~ mutate(., fit.rank = percent_rank(.data$fit))) %>% 
+  bind_rows() %>% 
+  group_by(type) %>% 
+  summarize(rank = weighted.mean(fit.rank, wgt)) %>% 
+  arrange(rank)
+
+typeorder <- c(typetab$type[!(typetab$type %in% typerank$type)],
+               typerank$type)
+plot <- mutate(plot, type = factor(type, levels = typeorder))
+str(plot)
+
+facekey <- tibble(type = typeorder) %>% 
+  left_join(typetab) %>% 
+  pull(facekey)
+```
+
+```{r}
+d <- filter(plot, species == "P.sitchensis-lutzii")
+g1 <- ggplot(data = d, mapping = aes(x = type)) + 
+  scale_x_discrete(drop = FALSE) +
+  geom_vline(xintercept = which(levels(d$type) == 'forest'), linetype = "dotted") +
+  geom_point(data = filter(d, modeled == TRUE, !is.na(locality)),
+             mapping = aes(y = fit), color = 'grey', alpha = 0.5, pch = 20,
+             position = position_jitter(width = 0.1)) +
+  geom_linerange(mapping = aes(ymin = ci.l, ymax = ci.u), color = 'blue', size = 1) +
+  geom_point(data = filter(d, modeled == TRUE, is.na(locality)),
+             mapping = aes(y = fit), color = 'blue', size = 2) +
+  geom_point(data = filter(d, modeled == FALSE), mapping = aes(y = fit), 
+             color = 'blue', pch = 1, size = 2) +
+  scale_y_log10(
+    breaks = scales::trans_breaks("log10", function(x) 10^x),
+    labels = scales::trans_format("log10", scales::math_format(10^.x)),
+    minor_breaks = NULL) +
+  coord_flip(ylim = c(1e-3, 1e2)) +
+  labs(title = 'Picea sitchensis / lutzii', 
+       x = 'ecosystem type', y = 'relative establishment probability') +
+  theme_light() + 
+  theme(axis.text.y = element_text(face = facekey),
+        plot.title = element_text(face = 'italic'))
+#plot(g1)
+
+d <- filter(plot, species == "P.abies")
+g2 <- ggplot(data = d, mapping = aes(x = type)) + 
+  scale_x_discrete(drop = FALSE) +
+  geom_vline(xintercept = which(levels(d$type) == 'forest'), linetype = "dotted") +
+  geom_point(data = filter(d, modeled == TRUE, !is.na(locality)),
+             mapping = aes(y = fit), color = 'grey', alpha = 0.5, pch = 20,
+             position = position_jitter(width = 0.1)) +
+  geom_linerange(mapping = aes(ymin = ci.l, ymax = ci.u), color = 'red', size = 1) +
+  geom_point(data = filter(d, modeled == TRUE, is.na(locality)),
+             mapping = aes(y = fit), color = 'red', size = 2) +
+  geom_point(data = filter(d, modeled == FALSE), mapping = aes(y = fit), 
+             color = 'red', pch = 1, size = 2) +
+  scale_y_log10(
+    breaks = scales::trans_breaks("log10", function(x) 10^x),
+    labels = scales::trans_format("log10", scales::math_format(10^.x)),
+    minor_breaks = NULL) +
+  coord_flip(ylim = c(1e-3, 1e2)) +
+  labs(title = 'Picea abies') +
+  theme_light() +
+  theme(axis.title.y=element_blank(),
+        axis.text.y=element_blank(),
+        axis.ticks.y=element_blank(),
+        axis.title.x = element_blank(),
+        plot.title = element_text(face = 'italic'))
+#plot(g2)
+
+d <- filter(plot, species == "Larix")
+g3 <- ggplot(data = d, mapping = aes(x = type)) + 
+  scale_x_discrete(drop = FALSE) +
+  geom_vline(xintercept = which(levels(d$type) == 'forest'), linetype = "dotted") +
+  geom_point(data = filter(d, modeled == TRUE, !is.na(locality)),
+             mapping = aes(y = fit), color = 'grey', alpha = 0.5, pch = 20,
+             position = position_jitter(width = 0.1)) +
+  geom_linerange(mapping = aes(ymin = ci.l, ymax = ci.u), color = 'purple', size = 1) +
+  geom_point(data = filter(d, modeled == TRUE, is.na(locality)),
+             mapping = aes(y = fit), color = 'purple', size = 2) +
+  geom_point(data = filter(d, modeled == FALSE), mapping = aes(y = fit), 
+             color = 'purple', pch = 1, size = 2) +
+  scale_y_log10(
+    breaks = scales::trans_breaks("log10", function(x) 10^x),
+    labels = scales::trans_format("log10", scales::math_format(10^.x)),
+    minor_breaks = NULL) +
+  coord_flip(ylim = c(1e-3, 1e3)) +
+  labs(title = 'Larix') +
+  theme_light() +
+  theme(axis.title.y=element_blank(),
+        axis.text.y=element_blank(),
+        axis.ticks.y=element_blank(),
+        axis.title.x = element_blank(),
+        plot.title = element_text(face = 'italic'))
+#plot(g3)
+
+d <- filter(plot, species == "P.contorta")
+g4 <- ggplot(data = d, mapping = aes(x = type)) + 
+  scale_x_discrete(drop = FALSE) +
+  geom_vline(xintercept = which(levels(d$type) == 'forest'), linetype = "dotted") +
+  geom_point(data = filter(d, modeled == TRUE, !is.na(locality)),
+             mapping = aes(y = fit), color = 'grey', alpha = 0.5, pch = 20,
+             position = position_jitter(width = 0.1)) +
+  geom_linerange(mapping = aes(ymin = ci.l, ymax = ci.u), color = 'darkgreen', size = 1) +
+  geom_point(data = filter(d, modeled == TRUE, is.na(locality)),
+             mapping = aes(y = fit), color = 'darkgreen', size = 2) +
+  geom_point(data = filter(d, modeled == FALSE), mapping = aes(y = fit), 
+             color = 'darkgreen', pch = 1, size = 2) +
+  scale_y_log10(
+    breaks = scales::trans_breaks("log10", function(x) 10^x),
+    labels = scales::trans_format("log10", scales::math_format(10^.x)),
+    minor_breaks = NULL) +
+  coord_flip(ylim = c(1e-2, 1e4)) +
+  labs(title = 'Pinus contorta') +
+  theme_light() +
+  theme(axis.title.y=element_blank(),
+        axis.text.y=element_blank(),
+        axis.ticks.y=element_blank(),
+        axis.title.x = element_blank(),
+        plot.title = element_text(face = 'italic'))
+#plot(g4)
+
+
+g1234 <- g1 + g2 + g3 + g4 + 
+  plot_layout(ncol = 4)
+```
+
+```{r}
+ggsave(g1234, filename= 'relative-establishment.pdf', path = here('ms', 'figures'),
+  scale = 1, width = 34, height = 21, units = 'cm', dpi = 300)
+```
+
+
+Using faceting. Can't specify ylim individually for each facet:
+
+```{r}
+ggplot(plot, mapping = aes(x = nin, color = species)) + 
+  geom_linerange(mapping = aes(ymin = ci.l, ymax = ci.u)) +
+  facet_grid(cols = vars(species), scales = "free_x") +
+  scale_y_log10() +
+  coord_flip() +
+  scale_color_brewer(type = 'qual', palette='Dark2') +
+  labs(x = 'ecosystem type', 
+       y = 'relative establishment probability', 
+       title = 'Relative establishment across ecosystem types') +
+  theme(legend.position = "none")
+
+```
+
 
 # sessionInfo 
 
