--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -13,6 +13,8 @@ institute:
 bibliography: invasibility-ms.bib
 output: 
   bookdown::html_document2:
+    toc: true
+    toc_float: true
     pandoc_args:
       - '--lua-filter=lua-filters/scholarly-metadata.lua'
       - '--lua-filter=lua-filters/author-info-blocks.lua'
@@ -255,59 +257,20 @@ kable(traits, escape = FALSE) %>%
 
 ## A3
 
-```{r recreate vegheight table, include=FALSE}
-types <- read_csv(here('data', 'typenames.csv'))
-grouping <- tribble( # from 'locality-WALD.Rmd'
-  ~code, ~group, ~vegheight,
-  "T1", "T1", 0,
-  "T2", "T2", 0.5,
-  "T3", "T3", 0.5,
-  "T4", "T4", 10,
-  "T6", "T6", 0,
-  "T12", "T12", 0.5,
-  "T13", "T13", 0,
-  "T16", "T16", 0.5,
-  "T17", "T17", 0,
-  "T18", "T18", 0,
-  "T21", "T21", 0,
-  "T24", "T24", 0.5,
-  "T27", "T27", 0,
-  "T29", "T29", 0,
-  "T30", "T30", 10,
-  "T31", "T31", 0.5,
-  "T32", "T32", 0.5,
-  "T33", "T33", 0.5,
-  "T34", "T34", 0.5,
-  "T35", "artificial", 0,
-  "T36", "T36", 0.5,
-  "T37", "artificial", 0,
-  "T38", "plantation forest", 10,
-  "T39", "artificial", 0,
-  "T40", "T40", 0,
-  "T41", "T41", 0.5,
-  "T42", "T42", 0,
-  "T43", "artificial", 0,
-  "T44", "T44", 0.5,
-  "T45", "T45", 0.5,
-  "V1", "V1", 0,
-  "V2", "V2", 10,
-  "V3", "V3", 0,
-  "V4", "V4", 0,
-  "V8", "V8", 10,
-  "V9", "V9", 0,
-  "V10", "V10", 0,
-  "V11", "V11", 0,
-  "V12", "V12", 0,
-  "V13", "V13", 0)  
-nin <- left_join(grouping, types, by = c('group' = 'type'))
-nin <- select(nin, code, name, vegheight) %>% 
-  rename(`vegetation height` = vegheight)
+```{r types table, include=FALSE}
+pairing <- read_csv(here('data','codetype-pairing.csv'))
+types <- read_csv(here('data', 'types.csv'))
+typestab <- inner_join(types, pairing) %>%
+  filter(!grepl(pattern = '.', x = .data$code, fixed = TRUE)) %>% 
+  select(type = name, code, category, structuring, `vegetation height` = vegheight)
 # Footnotes
-names(nin)[3] <- paste0(names(nin)[3], footnote_marker_alphabet(1))
+names(typestab)[5] <- paste0(names(typestab)[5], footnote_marker_alphabet(1))
 ```
 
 ```{r nin-table}
-kable(nin, escape = FALSE) %>% 
+options(knitr.kable.NA = '')
+kable(typestab, escape = FALSE) %>% 
+  collapse_rows(columns = 1) %>% 
   kable_styling(bootstrap_options = c("striped", "condensed")) %>% 
   footnote(alphabet = "approximate vegetation heights (meters) are used only to estimate wind turbulence")
 ```
