--- a/reports/locality-WALD.Rmd
+++ b/reports/locality-WALD.Rmd
@@ -5,6 +5,11 @@ editor_options:
   chunk_output_type: console
 ---
 
+```{r jobs script, eval=FALSE}
+knitr::purl(input = here('reports','locality-WALD.Rmd'),
+            output = here('reports','locality-WALD.R'))
+```
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
@@ -71,54 +76,27 @@ eklima <- read_csv(here("data","raw","eKlima","EKLIMAwind.csv"))
 sector.breaks <- seq(0, 360, by=20)
 ```
 
-```{r vegetation height}
-grouping <- tribble(
-  ~code, ~group, ~vegheight,
-  "T1", "T1", 0,
-  "T2", "T2", 0.5,
-  "T3", "T3", 0.5,
-  "T4", "T4", 10,
-  "T6", "T6", 0,
-  "T12", "T12", 0.5,
-  "T13", "T13", 0,
-  "T16", "T16", 0.5,
-  "T17", "T17", 0,
-  "T18", "T18", 0,
-  "T21", "T21", 0,
-  "T24", "T24", 0.5,
-  "T27", "T27", 0,
-  "T29", "T29", 0,
-  "T30", "T30", 10,
-  "T31", "T31", 0.5,
-  "T32", "T32", 0.5,
-  "T33", "T33", 0.5,
-  "T34", "T34", 0.5,
-  "T35", "artificial", 0,
-  "T36", "T36", 0.5,
-  "T37", "artificial", 0,
-  "T38", "plantation forest", 10,
-  "T39", "artificial", 0,
-  "T40", "T40", 0,
-  "T41", "T41", 0.5,
-  "T42", "T42", 0,
-  "T43", "artificial", 0,
-  "T44", "T44", 0.5,
-  "T45", "T45", 0.5,
-  "T35.T37.T39.T43", "artificial", 0,
-  "T35.T37", "artificial", 0,
-  "V1", "V1", 0,
-  "V2", "V2", 10,
-  "V3", "V3", 0,
-  "V4", "V4", 0,
-  "V8", "V8", 10,
-  "V9", "V9", 0,
-  "V10", "V10", 0,
-  "V11", "V11", 0,
-  "V12", "V12", 0,
-  "V13", "V13", 0)  
+```{r unique types, eval=FALSE}
+ninfiles <- list.files(here("data","qc"), pattern = "nin.shp", recursive = TRUE)
+codes <- map(ninfiles, ~ st_read(here("data","qc",.), quiet = TRUE) %>% 
+               pull(code) %>% 
+               as.character())
+map(codes, ~ any(is.na(.))) %>% 
+  unlist() %>% 
+  which()
+codes <- flatten_chr(codes) %>% 
+  unique()
+codes[order(substring(codes, 1, 1), as.numeric(substring(codes, 2)))]
+```
 
-vegheights <- grouping %>% 
-  group_by(group) %>% 
+```{r code-type pairing}
+pairing <- read_csv(here('data','codetype-pairing.csv'))
+```
+
+```{r vegetation height}
+types <- read_csv(here('data','types.csv'))
+vegheights <- types %>% 
+  group_by(type) %>% 
   summarize(vegheight = mean(vegheight))
 ```
 
@@ -143,11 +121,11 @@ for (i in species[1]) { # i <- species[1]
     message(j)
     nin <- st_read(here("data","qc",i,j,"nin.shp"), quiet = TRUE) %>% 
       as_tibble %>% st_as_sf() %>% 
-      mutate(code = as.character(code), group = NULL) %>% 
-      left_join(grouping, by = "code") %>% 
-      filter(group != "plantation forest")
+      mutate(code = as.character(code), type = NULL) %>% 
+      left_join(pairing, by = "code") %>% 
+      filter(type != "plantation forest")
     grd <- make_grid(nin, gridres = 10)
-    grd <- add_dummies_to_grid(grd, nin, field = group) %>% 
+    grd <- add_dummies_to_grid(grd, nin, field = type) %>% 
       as_tibble() %>% st_as_sf()
     grd <- grd %>% 
       mutate(rsum = rowSums(st_set_geometry(grd, NULL), na.rm = TRUE)) %>% 
@@ -155,8 +133,8 @@ for (i in species[1]) { # i <- species[1]
       select(-rsum) %>% 
       mutate_at(vars(-geometry), round, digits = 3) 
     vegheights.j <- vegheights %>% 
-      filter(group %in% colnames(grd)) %>% 
-      arrange(match(group, colnames(grd))) %>% 
+      filter(type %in% colnames(grd)) %>% 
+      arrange(match(type, colnames(grd))) %>% 
       pull(vegheight)
     grd <- grd %>%
       mutate(normalizer = st_set_geometry(., NULL) %>% rowSums(., na.rm = TRUE))
@@ -234,7 +212,7 @@ for (i in species[1]) { # i <- species[1]
       filter(Mnth %in% dispersal.season) %>% 
       mutate(sector = cut(DD, sector.breaks, include.lowest = TRUE))
     # Assume probability of abscission is UNRELATED to wind speed (constant)
-      sectors360 <- tibble(sector = unique(cut(0:360, sector.breaks, include.lowest = TRUE))) %>% 
+    sectors360 <- tibble(sector = unique(cut(0:360, sector.breaks, include.lowest = TRUE))) %>% 
       left_join(as.data.frame(prop.table(table(windobs$sector))), by=c('sector' = 'Var1'))
     set.seed(42)
     winds <- lapply(sectors360$sector, function(x) {
