--- a/reports/wildlings-NiN.Rmd
+++ b/reports/wildlings-NiN.Rmd
@@ -16,64 +16,8 @@ source(here("R","locality-functions.R"))
 
 # Setup
 
-```{r unique types, eval=FALSE}
-ninfiles <- list.files(here("data","qc"), pattern = "nin.shp", recursive = TRUE)
-codes <- map(ninfiles, ~ st_read(here("data","qc",.), quiet = TRUE) %>% 
-               pull(code) %>% 
-               as.character())
-map(codes, ~ any(is.na(.))) %>% 
-  unlist() %>% 
-  which()
-codes <- flatten_chr(codes) %>% 
-  unique()
-codes[order(substring(codes, 1, 1), as.numeric(substring(codes, 2)))]
-```
-
-```{r grouping of types}
-grouping <- tribble(
-  ~code, ~group, ~vegheight,
-  "T1", "T1", 0,
-  "T2", "T2", 0.5,
-  "T3", "T3", 0.5,
-  "T4", "T4", 10,
-  "T6", "T6", 0,
-  "T12", "T12", 0.5,
-  "T13", "T13", 0,
-  "T16", "T16", 0.5,
-  "T17", "T17", 0,
-  "T18", "T18", 0,
-  "T21", "T21", 0,
-  "T24", "T24", 0.5,
-  "T27", "T27", 0,
-  "T29", "T29", 0,
-  "T30", "T30", 10,
-  "T31", "T31", 0.5,
-  "T32", "T32", 0.5,
-  "T33", "T33", 0.5,
-  "T34", "T34", 0.5,
-  "T35", "artificial", 0,
-  "T36", "T36", 0.5,
-  "T37", "artificial", 0,
-  "T38", "plantation forest", 10,
-  "T39", "artificial", 0,
-  "T40", "T40", 0,
-  "T41", "T41", 0.5,
-  "T42", "T42", 0,
-  "T43", "artificial", 0,
-  "T44", "T44", 0.5,
-  "T45", "T45", 0.5,
-  "T35.T37.T39.T43", "artificial", 0,
-  "T35.T37", "artificial", 0,
-  "V1", "V1", 0,
-  "V2", "V2", 10,
-  "V3", "V3", 0,
-  "V4", "V4", 0,
-  "V8", "V8", 10,
-  "V9", "V9", 0,
-  "V10", "V10", 0,
-  "V11", "V11", 0,
-  "V12", "V12", 0,
-  "V13", "V13", 0) 
+```{r code-type pairing}
+pairing <- read_csv(here('data','codetype-pairing.csv'))
 ```
 
 ```{r check topology, include=FALSE, eval=FALSE}
@@ -102,11 +46,11 @@ for (j in species) { # j <- species[1]
     message(i)
     nin <- st_read(here("data","qc",j,i,"nin.shp"), quiet = TRUE) %>% 
       as_tibble %>% st_as_sf() %>% 
-      mutate(code = as.character(code), group = NULL) %>% 
-      left_join(grouping, by = "code")
+      mutate(code = as.character(code), type = NULL) %>% 
+      left_join(pairing, by = "code")
     grd <- make_grid(nin, gridres = 10)
     
-    grd <- add_dummies_to_grid(grd, nin, field = group) %>% 
+    grd <- add_dummies_to_grid(grd, nin, field = type) %>% 
       as_tibble() %>% st_as_sf()
     grd <- grd %>% 
       mutate(rsum = rowSums(st_set_geometry(grd, NULL), na.rm = TRUE)) %>% 
